--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hono-quiz-app",
   "scripts": {
     "dev": "wrangler dev",
+    "build": "esbuild src/index.tsx --bundle --outfile=dist/index.js --target=es2022 --loader:.ts=tsx --external:cloudflare:workers",
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
@@ -9,6 +10,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
+    "esbuild": "^0.25.2",
     "wrangler": "^4.4.0"
   }
 }
